graos-backend:1.0.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graos-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graos-backend
  template:
    metadata:
      labels:
        app: graos-backend
    spec:
      containers:
      - name: app
        image: adventureandre/graos-backend:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
