services.yml
apiVersion: v1
kind: Service
metadata:
  name: graos-backend-service
spec:
  type: ClusterIP
  selector:
    app: graos-backend
  ports:
  - port: 80
    targetPort: 3001

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: fox-control-mysql-connection
# spec:
#   type: NodePort
#   selector:
#     app: postgres
#   ports:
#   - port: 5432
#     targetPort: 5432
#     nodePort: 30432 # deixei nessa porta para fixar o acesso ao banco de dados
